# scratchy-v0

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  package.json  restart.sh  serve.js  test-compaction-phase3.js  test-compaction-progress.js  test-compaction-serve.js
canvas/: serve.js.disabled
defaults/: MEMORY.md  SOUL.md
docs/: PHASE-CANVAS-DND-RESIZE.md  PHASE-COLLABORATIVE-CANVAS.md  PHASE-EMBEDDED-OAUTH.md  PHASE-GITHUB-WIDGET.md  PHASE-HOME-AUTOMATION-WIDGET.md  PHASE-KLIPPER-WIDGET.md  PHASE-MESSAGE-VIRTUALIZATION.md  PHASE-PLUGIN-SYSTEM.md  PHASE-PUSH-NOTIFICATIONS.md  PHASE-TAURI-DESKTOP.md  PHASE-WEATHER-WIDGET.md  PHASE-WIDGET-MARKETPLACE.md  PHASE19-MULTI-USER-AUTH.md  PHASE19F-ONBOARDING.md  SETUP.md  clawos-security.md  infrastructure.example.md  openclaw-fork.md  scratchy-architecture.md  subagent-dashboard-ops.md  toon-component-reference.toon  toon-protocol.md  widget-development.md
genui-engine/: INTEGRATION_COMPLETE.md  PHASE_2_COMPLETE.md  README.md  benchmark.js  classifier.js  integration.md  isolated-widget-framework.js  memory-protection-hooks.js  scratchy-complete-integration.js  scratchy-integration.js  simple-test.js  status-lines.js  test-tier1.js  training-data.json  universal-status.js  widget-manifest.json
lib/: device-sync.js  memory-store.js  session-isolation.js  subagent-dashboard.js  toon-encoder.js  toon-encoder.test.js  user-profiles.js  version-store.js  widget-region.js  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gateway.rs  lib.rs  main.rs
(+177 files in other folders)
