[package]
name = "scratchy"
version = "0.1.0"
edition = "2021"
description = "Generative UI client for OpenClaw agents"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Phase 3
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "scratchy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

